<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.2-Release-Notes -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
    </parent>

    <!-- https://www.sofastack.tech/projects/sofa-boot/quick-start/ -->
    <!-- <parent>
        <groupId>com.alipay.sofa</groupId>
        <artifactId>sofaboot-dependencies</artifactId>
        <version>4.2.0</version>
    </parent> -->

    <groupId>com.bytedesk</groupId>
    <artifactId>im</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>

    <modules>
        <module>channels</module>
        <module>modules</module>
        <module>plugins</module>
        <module>starter</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <sofa.boot.version>4.2.0</sofa.boot.version>
        <querydsl.version>5.1.0</querydsl.version>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
        <binarywang.weixin.version>4.7.0</binarywang.weixin.version>
        <spring-ai.version>1.0.0-SNAPSHOT</spring-ai.version>
		<jackson.version>2.18.2</jackson.version>
        <flowable.version>7.1.0</flowable.version>
        <spring-ai.version>1.0.0-SNAPSHOT</spring-ai.version>
        <revision>0.6.2</revision>
    </properties>

    <dependencies>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>resolveCiFriendliesOnly</flattenMode>
                            <pomElements>
                                <parent>expand</parent>
                                <distributionManagement>remove</distributionManagement>
                                <repositories>remove</repositories>
                            </pomElements>
                        </configuration>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>